@@ -58,6 +58,7 @@ require 'rake/early_time'
 require 'rake/name_space'
 require 'rake/task_manager'
 require 'rake/application'
+require 'rake/backtrace'
 
 $trace = false
 
